syntax = "proto3";

package protos;
option go_package = ".;protos";


message CreateRequest {
    optional int64 tx_id = 1;
    string table = 2;
    repeated string columns = 3;
}

message SetRequest {
    optional int64 tx_id = 1;
    string table = 2;
    repeated string values = 3;
}

message Empty {
}

message Transaction {
    int64 tx_id = 1;
}
  
message Error {
    int32 status = 1;
    string message = 2;
}
  
service WriterService {
    rpc Create(CreateRequest) returns (Error) {}
    rpc Set(SetRequest) returns (Error)   {}
    rpc NewTransaction(Empty) returns (Transaction) {}
    rpc Commit(Transaction) returns (Error) {}
}